# Controller-Device

./: .gitignore  app.py  communication.py  device.py  device_support.py  test.py
.github/workflows/: rust.yml
device-appliction-interface/: Cargo.toml  cfg.toml
device-appliction-interface/src/: main.rs
device-appliction-interface/src/common/: config.rs  mod.rs
device-appliction-interface/src/http_service/: main.rs
device-appliction-interface/src/middleware/: json_warpper.rs  mod.rs  query_redis.rs  redis_wrapper.rs
device-connection/: Config.py  MsgField.py  app.py  communication.py  device.py  device_support.py  devicepool.py  foo.py  logger.py  test.py
device-connection-rs/: Cargo.toml  release.sh
device-connection-rs-async/: .gitignore  Cargo.toml  README.md  cfg.toml
device-connection-rs-async/src/: main.rs
device-connection-rs-async/src/application_service/: mod.rs
device-connection-rs-async/src/common/: config.rs  function.rs  mod.rs
device-connection-rs-async/src/middleware_wrapper/: json_wrapper.rs  mod.rs  mq.rs  redis_test.rs  redis_wrapper.rs
device-connection-rs-async/src/perception_service/: connection.rs  device.rs  map2redis.rs  mod.rs  test.rs
device-connection-rs/src/: connection.rs  device.rs  http_server.rs  loge_cfg.rs  main.rs  messagequeue.rs
doc/: CSoD.md  generate-salt-sn.py  sn规范.docx  架构.eddx  设备抽象模型.md  长连接服务与用户服务接口.md
test/: http_test.sh
test/factory-test/: mxft.py
