[package]
name = "untitled5"
version = "0.1.0"
authors = ["yulincoder <784773435@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# evmap = "10.0.2" # A free-lock hash map
log = "0.4.8"
loge = "0.4.1"
redis = "0.16.0"
# chrono = { version = "0.4", features = ["serde"] }
tokio = { version = ">=0.2", features = ["full"] }
lazy_static = "1.4.0"
