[package]
name = "untitled5"
version = "0.1.0"
authors = ["yulincoder <784773435@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
loge = {version = "^0.4.2", features = ["file"]}
redis = "0.16.0"
actix-web = ">=2"
actix-rt = ">=1"
serde_json = "1.0"
# tokio = { version = ">=0.2", features = ["full"] }

